<resources>
    <string name="app_name">FoodDeliveryApp</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="google">Google</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="password">Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="hello_fragment">Hello Fragment</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
</resources>