<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_main_color"
    android:layout_height="match_parent"
    tools:context=".SignInActivity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0DFFFFFF"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_extrabold"
            android:layout_gravity="center"
            android:text="Sign Up"
            android:textColor="#ffffff"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_whatsapp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:src="@drawable/app_logo"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/corner"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/nunito_extrabold"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="13dp" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginVertical="18dp"
                android:background="@drawable/corner"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/nunito_extrabold"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="13dp" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/corner"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/nunito_extrabold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="13dp" />

            <Button
                android:id="@+id/btsignup"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/corner"
                android:backgroundTint="#E41E1E"
                android:elevation="2dp"
                android:fontFamily="@font/nunito_extrabold"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvalready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="right"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/sign_up_with_phone"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>