<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_main_color"
    android:layout_height="match_parent"
    tools:context=".SignInActivity.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center"
            android:text="Log In"
            android:textColor="#ffffff"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="48dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:contentDescription="TODO"
                android:src="@drawable/food_delivery_lo"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/corner"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/nunito_extrabold"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="13dp" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/corner"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/nunito_extrabold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="13dp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="right"
                android:text="Click for Sign Up"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btsignIn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/corner"
                android:backgroundTint="#E41E1E"
                android:fontFamily="@font/nunito_extrabold"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btgoogle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/google"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:text="@string/sign_in_with_phone"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>